commit 2 main_svc - откат изменений в классе AdminRestHandler + event and user service